Improve documentation